# toolbox

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/actions/build-toolbox/: action.yml
.github/workflows/: build.yml  ci.yml  release.yml  weekly-release.yml
crates/toolbox/: Cargo.toml  build.rs
crates/toolbox/resources/github-app-agent-workflow/: SKILL.md
crates/toolbox/src/: cli.rs  github.rs  lib.rs  main.rs
crates/toolbox/tests/: cli.rs
scripts/: headver  release-metadata  weekly-release-changes
skills/github-app-agent-workflow/: SKILL.md
skills/github-app-auth/: SKILL.md
skills/github-app-auth/agents/: openai.yaml
