[package]
name = "toolbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Personal general-purpose CLI/TUI toolbox"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
